@@ -33,6 +33,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.mixpanel</groupId>
+            <artifactId>mixpanel-java</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
         </dependency>
@@ -164,6 +169,46 @@
                         <configuration>
                             <skip>false</skip>
                             <mainClass>org.cosplay.games.pong.CPPongGame</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>mir</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions><execution><goals><goal>java</goal></goals></execution></executions>
+                        <configuration>
+                            <skip>false</skip>
+                            <mainClass>org.cosplay.games.mir.CPMirGame</mainClass>
+                            <arguments>
+                                <argument>--add-opens</argument>
+                                <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
+                            </arguments>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>bird</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <executions><execution><goals><goal>java</goal></goals></execution></executions>
+                        <configuration>
+                            <skip>false</skip>
+                            <mainClass>org.cosplay.games.bird.CPBirdGame</mainClass>
                             <arguments>
                                 <argument>--add-opens</argument>
                                 <argument>javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argument>
